# revive

./: .env.example  .gitignore  .vercelignore  ENGINEERING-GAPS.md  INVESTOR-MEMO.md  MOAT-ANALYSIS.md  README.md  Revive-alpha-customers.xlsx  VALIDATION.json  alpha-customers-seed.md  build_alpha_list.py  docker-compose.yml  linkedin-outreach-drafts.md  middleware.ts  next.config.mjs  outreach-monday-2026-07-13.md  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  revive-prospects.md  send-plan-final.md  skills-lock.json  svg-imports.d.ts  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: launch.json
app/: globals.css  layout.tsx
components/: EventLog.tsx  Lane.tsx  Outcome.tsx  Panels.tsx  atoms.tsx
deck/: Revive-Seed-Deck.pptx  build.js
decks/: .~lock.revive-seed-deck.pptx#  build_deck.py  html_deck.py  make_logo.py  revive-seed-deck.pptx  ~$revive-seed-deck.pptx
deploy/: render.yaml  worker.Dockerfile
docs/: peer-founder-map.md  production-runbook.md  revivebench-whitepaper.md  security-review-packet.md  supported-integration.md  trust-boundaries.md
lib/: action-contracts.ts  action-requests.ts  api-auth.ts  attention.ts  audit.ts  auth.ts  auto-reconcile.ts  billing.ts  classifier.ts  claude.ts  console-mirror.ts  control-plane.ts  custom-connectors.ts  dead-runs.ts  engine.ts  failure-classifier.ts  graph-codes.ts  hosted.ts  mock-graph.ts  natural-language-policy.ts  notify.ts  outcome-transactions.ts  policy.ts  protection-stats.ts  rate-limit.ts  rbac.ts  recovery-access.ts  recovery-target.ts  redaction.ts  resolution-intelligence.ts  revive-dead-run.ts  secrets.ts  secure-envelope.ts  steps.ts  store.ts  telemetry.ts  types.ts  usage.ts  useReviveClient.ts  webhooks.ts  (+3 more)
mcp-gateway/: README.md  package.json
outreach/: alpha-outreach-draft.md  alpha-targets.csv  apollo-enrichment-input.csv  reply-targets.md  revive-alpha-contacts.csv  (+3 more)
scripts/: db-backup.sh  (+24 more)
sidecar/: README.md  pyproject.toml
sidecar/benchmarks/: live_graph_killer_demo.py  live_langgraph_nango.py  resilience_campaign.py  revivebench.py
sidecar/examples/: langgraph_agent.py  langgraph_resume_endpoint.py  mock_idp.py  nightly_briefing.py  parley_approval.py  resume_receiver_express.js  resume_receiver_fastapi.py
sidecar/revive/: __init__.py  checkpoint.py  classifier.py  client.py  engine.py  postgres.py  providers.py  receiver.py  rendezvous.py  reporter.py
sidecar/revive/adapters/: __init__.py  anthropic_tools.py  dead_runs.py  langgraph.py  openai_agents.py  temporal.py
sidecar/tests/: test_classifier.py  test_dead_run_client.py  test_recovery.py  test_resume_receiver.py  test_temporal_adapter.py  test_webhook.py
(+227 files in other folders)
