[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revive-sdk"
version = "0.1.0"
description = "Agent recovery control plane SDK: protect agent actions so a failed credential parks the run and resumes exactly-once, without duplicating side effects. LangGraph, OpenAI Agents, and Anthropic tool-use adapters included."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Revive Labs" }]
keywords = ["oauth", "agents", "langgraph", "temporal", "durable-execution", "token-refresh", "ai-agents", "mcp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
dependencies = []  # core is stdlib-only

[project.optional-dependencies]
langgraph = ["langgraph>=1.2,<2", "langgraph-checkpoint-sqlite>=3.1,<4"]
temporal = ["temporalio>=1.7"]
postgres = ["psycopg[binary]>=3.2"]
hosted = ["temporalio>=1.7", "psycopg[binary]>=3.2"]
dev = ["langgraph>=0.2"]

[project.urls]
Homepage = "https://revivelabs.app"
Repository = "https://github.com/FlyingPotato437/revive"
Issues = "https://github.com/FlyingPotato437/revive/issues"

[tool.hatch.build.targets.wheel]
packages = ["revive"]
